@@ -42,3 +42,5 @@ Pamela Heckmann <Pam_Heckmann@icon-labs.com>
 Steve Hills <SH122258@exchange.SanDiegoCA.NCR.COM>
 Mark Kaplun <markk5@bezeqint.net>
 Caffaratti Fabrizio <Fabrizio.Caffaratti@TILAB.COM>
+Moritz Bunkus <moritz@bunkus.org>
+Mark Kaplun <markk5@bezeqint.net>
